--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -171,7 +171,7 @@
 .menu__list {
 	list-style: none;
 	margin: 0 auto;
-	padding: 20px $grid-spacing;
+	padding: 20px 20px;
 
 	@include mq(tabletp) {
 		max-width: none;
