--- a/_sass/_includes/_listing.scss
+++ b/_sass/_includes/_listing.scss
@@ -5,8 +5,8 @@
 // - - - - - - - - - - - - - - - - - -
 
 .listing {
-	padding: 0 $grid-spacing/2+0px;
-	margin-top: -$grid-spacing/2+0px;
+	padding: 0 10+0px;
+	margin-top: -10+0px;
 }
 
 .listing-wrap {
@@ -15,7 +15,7 @@
 
 .listing-item {
 	position: relative;
-	padding: $grid-spacing/2+0px;
+	padding: 10+0px;
 	float: left;
 	width: 50%;
 
@@ -127,13 +127,13 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Pagination
 
 .pagination {
-	margin-top: $grid-spacing/2+0px;
-	padding: 0 $grid-spacing;
+	margin-top: 10+0px;
+	padding: 0 20;
 }
 
 .pagination__prev,
 .pagination__next {
-	width: calc(50vw - #{$grid-spacing*1.5});
+	width: calc(50vw - #{20*1.5});
 	text-align: center;
 	pointer-events: none;
 	opacity: 0.2;
